# docs/swagger.json
@@ -25,10 +25,16 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "owner address",
+                        "description": "owner/account address",
                         "name": "owner",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "bucket name",
+                        "name": "bucket",
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -68,10 +74,16 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "owner address",
+                        "description": "owner/account address",
                         "name": "owner",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "bucket name",
+                        "name": "bucket",
+                        "in": "formData"
                     },
                     {
                         "type": "string",
@@ -135,6 +147,50 @@
                 }
             }
         },
+        "/api/getBucket": {
+            "get": {
+                "description": "get bucket information for a specific bucket",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bucket"
+                ],
+                "summary": "get bucket information",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "account owner address",
+                        "name": "owner",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "bucket name",
+                        "name": "bucket",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "599": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/error.APIError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/getNeedle": {
             "get": {
                 "description": "get needle information for a specific owner",
@@ -151,12 +207,21 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "\"\"",
                         "description": "owner address",
                         "name": "owner",
                         "in": "query"
                     },
                     {
                         "type": "string",
+                        "default": "\"\"",
+                        "description": "bucket name",
+                        "name": "bucket",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "default": "\"\"",
                         "description": "needle name",
                         "name": "name",
                         "in": "query"
@@ -286,6 +351,59 @@
                         "default": 0,
                         "description": "pagination offset",
                         "name": "offset",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 32,
+                        "description": "number of items per page",
+                        "name": "length",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "599": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/error.APIError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/listBucket": {
+            "get": {
+                "description": "get a list of buckets with pagination support",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bucket"
+                ],
+                "summary": "list buckets",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "\"\"",
+                        "description": "owner address",
+                        "name": "owner",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "pagination offset",
+                        "name": "offset",
                         "in": "query"
                     },
                     {
@@ -294,6 +412,56 @@
                         "description": "number of items per page",
                         "name": "length",
                         "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "599": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/error.APIError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "get a list of buckets with pagination support",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bucket"
+                ],
+                "summary": "list buckets",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "owner address",
+                        "name": "owner",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "pagination offset",
+                        "name": "offset",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 32,
+                        "description": "number of items per page",
+                        "name": "length",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -329,8 +497,16 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "\"\"",
                         "description": "owner address",
                         "name": "owner",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "default": "\"\"",
+                        "description": "bucket name",
+                        "name": "bucket",
                         "in": "query"
                     },
                     {
@@ -379,8 +555,16 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "\"\"",
                         "description": "owner address",
                         "name": "owner",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "default": "\"\"",
+                        "description": "bucket name",
+                        "name": "bucket",
                         "in": "formData"
                     },
                     {
@@ -621,6 +805,10 @@
                     "description": "new created accounts at this day",
                     "type": "integer"
                 },
+                "dailyBuckets": {
+                    "description": "new created buckets at this day",
+                    "type": "integer"
+                },
                 "dailyNeedles": {
                     "description": "new created needles at this day",
                     "type": "integer"
@@ -633,15 +821,19 @@
                     "type": "string"
                 },
                 "totalAccounts": {
-                    "description": "total accounts at this day",
+                    "description": "total accounts until this day",
+                    "type": "integer"
+                },
+                "totalBuckets": {
+                    "description": "total buckets until this day",
                     "type": "integer"
                 },
                 "totalNeedles": {
-                    "description": "total needles at this day",
+                    "description": "total needles until this day",
                     "type": "integer"
                 },
                 "totalVolumes": {
-                    "description": "total volumes at this day",
+                    "description": "total volumes until this day",
                     "type": "integer"
                 }
             }
